fixing offscreen text

--- a/css/GDP.css
+++ b/css/GDP.css
@@ -95,6 +95,7 @@ h1 {
         text-align: center;
         color: white;
         position: relative;
+        word-wrap: break-word;
     top: 2%;
     }
     #contact{
